--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
     rel="stylesheet"
   />
-  <title>Bsd Organics</title>
+  <title>Trade Enabler</title>
   <link rel="icon" type="image/x-icon" href="public\img\favicon.ico">
   <meta name="description" content="" />
   <meta name="author" content="@Issaafalkattan" />
